Setup cache in CI and install linux dependencies

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - uses: actions/cache@v4
+      with:
+        path: |
+          ~/.cargo/bin/
+          ~/.cargo/registry/index/
+          ~/.cargo/registry/cache/
+          ~/.cargo/git/db/
+          target/
+        key: cargo-build-${{ hashFiles('**/Cargo.toml') }}
+    - name: Install Linux dependencies
+      uses: ./.github/actions/install-linux-deps
     - name: Build
       run: cargo build --verbose
     - name: Run tests
